# aoc-haskell

./: aoc.cabal  output.txt
app/: Main.hs  Utils.hs
app/Days/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
