cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Marcus Nilsson
maintainer:         marcus.nilsson@genarp.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Utils, Days.Day1, Days.Day2, Days.Day3, Days.Day4

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.1.0,
        split,
        text,
        extra


    hs-source-dirs:   app, app/Days
    default-language: Haskell2010
